<resources>
    <string name="app_name">MobileTravel</string>
    <string name="action_settings">Settings</string>
    <string name="von">von</string>
    <string name="nach">nach</string>
    <string name="suche">suche</string>
    <string name="title_activity_connections">Connections</string>
    <string name="large_text">
        "here are the connections going to be.\n\n"
    </string>
    <string name="Test">Test</string>
    <string name="About">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_headline">Unternehmen</string>
    <string name="about_text">Gruppenarbeit</string>
    <string name="btnArrivalsText">Ankunft</string>
    <string name="btnDepartureText">Abfahrt</string>
    <string name="btnDateDefaultText">Datum</string>
    <string name="btnTimeDefaultText">Zeit</string>
    <string name="refreshDateTimeButtonText">Refresh Time</string>
    <string name="mainOppositeDirectionText">Gegenrichtung</string>
    <string name="mainSearchConnectionsText">Suche</string>
    <string name="action_favorite">Favorites</string>
    <string name="title_activity_connection_detail">ConnectionDetailActivity</string>
    <string name="via">via</string>
</resources>
