<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    android:layout_below="@+id/toolbar"
    android:layout_marginTop="80dp">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/von"
                    android:id="@+id/textViewFrom" />

                <AutoCompleteTextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/stationFrom"
                    android:inputType="textNoSuggestions|textAutoComplete"
                    android:imeOptions="actionNext"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/nach"
                    android:id="@+id/textViewTo" />

                <AutoCompleteTextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/stationTo"
                    android:inputType="textNoSuggestions|textAutoComplete"
                    android:imeOptions="actionNext"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnReverse"
                    android:src="@android:drawable/ic_menu_revert"
                    android:contentDescription="Reverse Direction" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/via"
                    android:id="@+id/textViewVia" />

                <AutoCompleteTextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/stationVia"
                    android:inputType="textNoSuggestions|textAutoComplete"
                    android:imeOptions="actionNext"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1" />


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacer1"
        android:minHeight="40dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/togBtnDepArr"
            android:textOn="@string/btnArrivalsText"
            android:textOff="@string/btnDepartureText" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnDate"
            android:text="@string/btnDateDefaultText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnTimeDefaultText"
            android:id="@+id/btnTime" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suche"
            android:id="@+id/btnSearch"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>